product/middleware/redis/backup/redis-master-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: dev
  name: redis-master
  labels:
    redis-sentinel: "true"
spec:
  tolerations:
    - key: "env"
      operator: "Equal"
      value: "dev"
      effect: "NoExecute"
  nodeSelector:
    env: "dev"
  containers:
  - name: redis-master
    image: registry.cn-hangzhou.aliyuncs.com/szss/redis:4.0.6
    imagePullPolicy: Always
    ports:
      - containerPort: 6379
        name: redis-server
    readinessProbe:
      exec:
        command: ['redis-cli','-a','123456', 'info', 'server']
  - name: redis-sentinel
    image: registry.cn-hangzhou.aliyuncs.com/szss/redis:4.0.6
    imagePullPolicy: Always
    ports:
      - containerPort: 26379
        name: redis-sentinel
    readinessProbe:
      exec:
        command: ['redis-cli','-p','26379', 'info', 'server']
