product/middleware/redis/backup/redis-sentinel-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: redis-sentinel
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-sentinel
        redis-sentinel: "true"
    spec:
      tolerations:
        - key: "env"
          operator: "Equal"
          value: "dev"
          effect: "NoExecute"
      nodeSelector:
        env: "dev"
      containers:
        - name: redis-sentinel
          image: registry.cn-hangzhou.aliyuncs.com/szss/redis:4.0.6
          imagePullPolicy: Always
          ports:
            - containerPort: 26379
              name: redis-sentinel
      volumes:
        - name: redis-sentinel-storage
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - redis-sentinel
                topologyKey: kubernetes.io/hostname
  selector:
    matchLabels:
      app: redis-sentinel
