product/middleware/redis/backup/redis-sentinel-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: redis-sentinel
  labels:
    app: redis-sentinel
spec:
  ports:
  - port: 26379
    name: redis-sentinel
  selector:
    redis-sentinel: "true"
