product/middleware/redis/backup/redis-slave-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  namespace: dev
spec:
  selector:
    app: redis-slave
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
